lsa in spark - parse wiki

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ collokiaCommonVersion=1.17.0-SNAPSHOT
 version_collokia_data=1.17.0-SNAPSHOT
 versionDynamoHack=1.0
 
+corenlpVersion = 3.5.2
+
 versionElasticSearch=2.3.0
 versionElasticSearchMR=2.2.0
 
