--- a/gradle.properties
+++ b/gradle.properties
@@ -10,14 +10,14 @@ versionDynamoHack=1.0
 corenlpVersion = 3.5.2
 
 versionElasticSearch=2.3.0
-versionElasticSearchMR=2.2.0
+versionElasticSearchMR=5.0.0-alpha4
 
 version_jackson=2.6.5
 #version_jackson=2.4.4
 version_jackson_kotlin=2.6.5-2
 version_jackson_scala=2.6.5
 
-version_jodatime=2.9.1
+version_jodatime=2.9.4
 version_jsoup=1.8.3
 version_guava=19.0
 
