document calssification - predicate model

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     //compile "org.apache.spark:spark-streaming-twitter_2.10:1.6.2"
     compile "org.elasticsearch:elasticsearch:$versionElasticSearch"
     compile "com.cybozu.labs:langdetect:1.1-20120112"
+    compile 'de.l3s.boilerpipe:boilerpipe:1.1.0'
     compile ("org.elasticsearch:elasticsearch-hadoop:$versionElasticSearchMR"){
 
         exclude group: "cascading"
