--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     compile "org.elasticsearch:elasticsearch:$versionElasticSearch"
     compile "com.cybozu.labs:langdetect:1.1-20120112"
     compile 'de.l3s.boilerpipe:boilerpipe:1.1.0'
+    compile 'xerces:xerces:2.4.0'
+    compile 'org.jsoup:jsoup:1.9.1'
+    compile 'net.sourceforge.nekohtml:nekohtml:1.9.22'
+
     compile ("org.elasticsearch:elasticsearch-hadoop:$versionElasticSearchMR"){
 
         exclude group: "cascading"
