--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include 'services:webservice'
 */
 
 rootProject.name = 'collokia_spark_ML_examples'
+include(':collokia-stanford-CoreNLP')
+project(':collokia-stanford-CoreNLP').projectDir = new File(settingsDir, '../collokia-stanford-CoreNLP')
