--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,5 @@ include 'services:webservice'
 rootProject.name = 'collokia_spark_ML_examples'
 include(':collokia-stanford-CoreNLP')
 project(':collokia-stanford-CoreNLP').projectDir = new File(settingsDir, '../collokia-stanford-CoreNLP')
+include(':collokia-common-util')
+project(':collokia-common-util').projectDir = new File(settingsDir, '../collokia-common-util')
