--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     //compile project(path: ':collokia-stanford-CoreNLP')
     //compile project(path: ':collokia-common-util')
-    compile "com.collokia:collokia-common-util:1.0-SNAPSHOT"
+    compile "com.collokia:collokia-common-util:$util_version"
 
     compile "joda-time:joda-time:$version_jodatime"
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$version_jackson"
