--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 group=com.collokia
 version=1.17.0-SNAPSHOT
 
-kotlinVersion=1.0.3
+kotlinVersion=1.0.4
+util_version=0.1.2.2
 scalaVersion=2.11
 
 collokiaCommonVersion=1.17.0-SNAPSHOT
