--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 group=com.collokia
 version=1.17.0-SNAPSHOT
 
-kotlinVersion=1.0.4
-util_version=0.1.4.0
+kotlinVersion=1.0.5
+util_version=0.1.5.4
 scalaVersion=2.11
 
 collokiaCommonVersion=1.17.0-SNAPSHOT
@@ -11,8 +11,8 @@ versionDynamoHack=1.0
 
 corenlpVersion = 3.5.2
 
-versionElasticSearch=5.0.0-alpha5
-versionElasticSearchMR=5.0.0-alpha5
+versionElasticSearch=5.0.1
+versionElasticSearchMR=5.0.1
 
 version_jackson=2.6.5
 #version_jackson=2.4.4
