--- a/build.gradle
+++ b/build.gradle
@@ -100,10 +100,35 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.8'
 }
 
-/*repositories {
-    mavenCentral()
-    jcenter()
-}*/
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+// To specify a license in the pom:
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+        }
+    }
+}
 
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
