--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar #
 *.war
 *.ear
 *.iml
@@ -13,12 +13,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/gradle/
+#/gradle/
 /.gradle/
-gradlew
+#gradlew
 gradlew.bat
 build
 data
 testData
 /.idea/
 /twitter.txt
+out/production/collokia-common-util/
+out/production/collokia-stanford-CoreNLP/
+spark-warehouse/
